# zephyr

./: .editorconfig  .gitignore  .justfile  CMakeLists.txt  README.md  flake.nix  shell.nix  west.yml
.github/setup-python-env/: action.yml
.github/workflows/: build.yml  clang-format.yml  docs.yml
.west/: config
app/: prj.conf
app/boards/: nucleo_f302r8.overlay
app/src/: main.c
drivers/: CMakeLists.txt  Kconfig
drivers/blink/: CMakeLists.txt  Kconfig  Kconfig.gpio_led  gpio_led.c
drivers/sensor/: Kconfig
drivers/sensor/example_sensor/: example_sensor.c
dts/bindings/blink/: blink-gpio-leds.yaml
dts/bindings/sensor/: zephyr,example-sensor.yaml
examples/hello/: CMakeLists.txt
examples/hello/src/: hello.cpp
include/app/drivers/: blink.h
include/kiwicpp/: kiwicpp.hpp  math.hpp
scripts/: example_west_command.py
tests/: CMakeLists.txt  test_library.cpp
tests/lib/custom/src/: main.c
